--- a/style.css
+++ b/style.css
@@ -7,8 +7,7 @@
   position: relative;
   margin: 10% auto 0 auto;
   display: flex;
-  flex: 1;
-  width: 50%;
+  width: 800px;
   height: 200px;
   box-shadow: inset 0 0 10px 1px rgba(0, 0, 0, 0.3);
 }
@@ -23,8 +22,7 @@
   transition: 0.6s ease;
 }
 .slider .slider-items .item {
-  flex: 0 0 25%;
-  max-width: 25%;
+  min-width: 200px;
   margin: 20px 0 20px 20px;
   padding: 10px;
   border-radius: 5px;
@@ -86,18 +84,16 @@
   margin: 10% auto 0 auto;
   display: flex;
   flex-wrap: wrap;
-  width: 40%;
+  width: 800px;
   margin-bottom: 10%;
 }
 .wrapper .block {
-  flex: 33.33333%;
-  max-width: 33.33333%;
+  min-width: 33.33333%;
   height: 160px;
   padding: 4px;
 }
 .wrapper .block:nth-child(5n + 4) {
-  flex-basis: 66.66666%;
-  max-width: 66.66666%;
+  min-width: 66.66666%;
 }
 .wrapper .inner {
   width: 100%;
@@ -106,30 +102,41 @@
   background-color: rebeccapurple;
 }
 @media (max-width: 768px) {
-  .slider .slider-items .item {
-    flex: 0 0 50%;
-    max-width: 50%;
+  .slider {
+    width: 480px;
+  }
+  .wrapper {
+    width: 480px;
   }
   .wrapper .block {
-    flex-basis: 50%;
-    max-width: 50%;
+    min-width: 50%;
   }
   .wrapper .block:nth-child(5n + 3) {
-    flex-basis: 100%;
-    max-width: 100%;
+    min-width: 100%;
   }
   .wrapper .block:nth-child(5n + 4) {
-    flex-basis: 50%;
-    max-width: 50%;
+    min-width: 50%;
   }
 }
 @media (max-width: 480px) {
+  .slider {
+    width: 300px;
+  }
+  .wrapper {
+    width: 300px;
+  }
   .wrapper .block {
-    flex-basis: 100%;
-    max-width: 100%;
+    min-width: 100%;
   }
   .wrapper .block:nth-child(5n + 4) {
-    flex-basis: 100%;
-    max-width: 100%;
+    min-width: 100%;
+  }
+}
+@media (max-width: 340px) {
+  .slider {
+    width: 300px;
+  }
+  .wrapper {
+    width: 200px;
   }
 }
