--- a/style.less
+++ b/style.less
@@ -7,8 +7,7 @@
     position: relative;
     margin: 10% auto 0 auto;
     display: flex;
-    flex: 1;
-    width: 50%;
+    width: 800px;
     height: 200px;
     box-shadow: inset 0 0 10px 1px rgba(0, 0, 0, 0.3);
     .slider-items {
@@ -21,8 +20,7 @@
             transition: .6s ease;
         }
         .item {
-            flex: 0 0 25%;
-            max-width: 25%;
+            min-width: 200px;
             margin: 20px 0 20px 20px;
             padding: 10px;
             border-radius: 5px;
@@ -92,16 +90,14 @@
     margin: 10% auto 0 auto;
     display: flex;
     flex-wrap: wrap;
-    width: 40%;
+    width: 800px;
     margin-bottom: 10%;
     .block {
-        flex: 33.33333%;
-        max-width: 33.33333%;
+        min-width: 33.33333%;
         height: 160px;
         padding: 4px;
         &:nth-child(5n + 4) {
-            flex-basis: 66.66666%;
-            max-width: 66.66666%;
+            min-width: 66.66666%;
         }
         
     }
@@ -114,40 +110,40 @@
 }
 @media (max-width: 768px) {
     .slider {
-        .slider-items {
-            .item {
-                flex: 0 0 50%;
-                max-width: 50%;
-            }
-        }
-        
+        width: 480px;
     }
     .wrapper {
-        
+        width: 480px;
         .block {
-            flex-basis: 50%;
-            max-width: 50%;
+            min-width: 50%;
             &:nth-child(5n + 3) {
-                flex-basis: 100%;
-                max-width: 100%;
+                min-width: 100%;
             }
             &:nth-child(5n + 4) {
-                flex-basis: 50%;
-                max-width: 50%;
+                min-width: 50%;
             }
         }
     }
 }
 @media (max-width: 480px) {
+    .slider {
+        width: 300px;
+    }
     .wrapper {
-        
+        width: 300px;
         .block {
-            flex-basis: 100%;
-            max-width: 100%;
+            min-width: 100%;
             &:nth-child(5n + 4) {
-                flex-basis: 100%;
-                max-width: 100%;
+                min-width: 100%;
             }
         }
+    }
+}
+@media (max-width: 340px) {
+    .slider {
+        width: 300px;
+    }
+    .wrapper {
+        width: 200px;
     }
 }
