--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 .slider {
   position: relative;
-  margin: 10% auto 0 auto;
+  margin: 100px auto 0 auto;
   display: flex;
   width: 800px;
   height: 200px;
@@ -81,7 +81,7 @@
 }
 .wrapper {
   position: relative;
-  margin: 10% auto 0 auto;
+  margin: 200px auto 0 auto;
   display: flex;
   flex-wrap: wrap;
   width: 800px;
@@ -101,7 +101,7 @@
   border-radius: 4px;
   background-color: rebeccapurple;
 }
-@media (max-width: 768px) {
+@media (max-width: 800px) {
   .slider {
     width: 480px;
   }
@@ -118,7 +118,7 @@
     min-width: 50%;
   }
 }
-@media (max-width: 480px) {
+@media (max-width: 500px) {
   .slider {
     width: 300px;
   }
